<resources>
    <string name="app_name">App Holder</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_done">Done</string>
    <string name="txt_transfer_completed">Transfer Completed!</string>
    <string name="txt_list_of_documents">List of Documents:</string>
    <string name="txt_transferring">Transferring</string>
    <string name="txt_consent">Approve sending data to mDL verifier</string>
    <string name="bt_approve">Approve</string>
    <string name="engagement_service_desc">mDL Holder NFC Engagement</string>
    <string name="engagement_aid_group_desc">mDL AID Group</string>
    <string name="bt_add_document">Add Document</string>
    <string name="txt_server_url">Enter the server URL</string>
    <string name="txt_provisioning_code">Enter the provisioning code</string>
    <string name="value_server_url">http://192.168.1.169:18013/mdlServer</string>
    <string name="value_provisioning_code">1001</string>
    <string name="bt_next">Next</string>
    <string name="txt_retrieving_data">Retrieving data</string>
    <string name="bt_ok">OK</string>
    <string name="bio_auth_title">Authenticate to share data</string>
    <string name="bio_auth_verifier_anonymous">Anonymous verifier is requesting the following information</string>
    <string name="bio_auth_verifier_trusted_with_name">Trusted verifier \"%1$s\" is requesting the following information</string>
    <string name="bio_auth_verifier_untrusted_with_name">Untrusted verifier \"%1$s\" is requesting the following information</string>
    <string name="bio_auth_cancel">Cancel</string>
    <string name="bio_auth_failed">User authentication has failed</string>
    <string name="fingerprint_removed_error">Biometric Authentication Error</string>
    <string name="fingerprint_removed_error_desc">Fingerprint was removed from the device so the credential cannot be shared anymore.</string>
    <string name="label_document_name">Name</string>
    <string name="label_document_type">Document type</string>
    <string name="bt_check_for_update">Check for Update</string>
    <string name="bt_delete">Delete</string>
    <string name="label_date_provisioned">Date Provisioned</string>
    <string name="label_date_check_update">Last Update Check</string>
    <string name="toast_press_back_twice">Tap back button again to exit</string>
    <string name="bt_refresh_auth_keys">Refresh Auth Keys</string>
    <string name="label_refresh_auth_keys">Last Refresh Auth Keys</string>
    <string name="bt_present_documents">Present Documents</string>

    <!-- mDL strings -->
    <string name="family_name">Family Name</string>
    <string name="given_name">Given Names</string>
    <string name="birth_date">Date of birth</string>
    <string name="issue_date">Date of issue</string>
    <string name="expiry_date">Date of expiry</string>
    <string name="issuing_country">Issuing country</string>
    <string name="issuing_authority">Issuing authority</string>
    <string name="document_number">Licence number</string>
    <string name="portrait">Portrait of mDL holder</string>
    <string name="driving_privileges">Categories of vehicles</string>
    <string name="un_distinguishing_sign">UN distinguishing sign</string>
    <string name="administrative_number">Administrative number</string>
    <string name="sex">Sex</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="eye_colour">Eye colour</string>
    <string name="hair_colour">Hair colour</string>
    <string name="birth_place">Place of birth</string>
    <string name="resident_address">Permanent place of residence</string>
    <string name="portrait_capture_date">Portrait image timestamp</string>
    <string name="age_in_years">How old are you (in years)?</string>
    <string name="age_birth_year">In what year were you born?</string>
    <string name="age_over_18">Age over 18?</string>
    <string name="age_over_21">Age over 21?</string>
    <string name="issuing_jurisdiction">Issuing jurisdiction</string>
    <string name="nationality">Nationality</string>
    <string name="resident_city">Resident city</string>
    <string name="resident_state">Resident state</string>
    <string name="resident_postal_code">Resident postal code</string>
    <string name="resident_country">Resident country</string>
    <string name="family_name_national_character">Family name in national characters</string>
    <string name="given_name_national_character">Given name in national characters</string>
    <string name="signature_usual_mark">Signature / usual mark</string>

    <!-- mVR strings -->
    <string name="registration_info">Vehicle Registration Information</string>
    <string name="registration_holder">Vehicle Registration Holder Information</string>
    <string name="basic_vehicle_info">Basic Vehicle Information</string>
    <string name="vin">Vehicle Identification Number</string>
    <string name="connection_mdoc_open">Connection to mdoc verifier is open</string>
    <string name="connection_mdoc_closed">Connection to mdoc verifier is closed</string>
    <string name="txt_documents_sent">%d request(s) served</string>

    <!-- micov strings -->

    <string name="fn">Family Name</string>
    <string name="gn">Given Name</string>
    <string name="dob">Date of Birth</string>
    <string name="v_RA01_1">First vaccination against RA01</string>
    <string name="v_RA01_2">Second vaccination against RA01</string>
    <string name="pid_PPN">ID with pasport number</string>
    <string name="pid_DL">ID with driver’s license number</string>
    <string name="micov.1_1D47_vaccinated">Indication of vaccination against Yellow Fever</string>
    <string name="RA01_vaccinated">Indication of vaccination against COVID-19</string>
    <string name="RA01_test">Indication of test event for COVID-19</string>
    <string name="safeEntry_Leisure">Safe entry indication</string>
    <string name="fac">Facial Image</string>
    <string name="fni">Family Name Initial</string>
    <string name="gni">Given Name Initial</string>
    <string name="by">Birth Year</string>
    <string name="bm">Birth Month</string>
    <string name="bd">Birth Day</string>

    <string name="item_settings">Settings</string>
    <string name="bt_close_connection">Close Connection</string>
    <string name="bt_update_personal_details">Update mDL Personal Details</string>
    <string name="enter_first_name">Enter first name for document</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="title_update_details">Enter details to modify document information</string>
    <string name="select_image">Select Image</string>
    <string name="update_mdl_document">Update mDL document</string>
    <string name="enter_dob">Enter date of birth(yyyy-MM-dd)</string>
</resources>